<resources>
    <string name="app_name">TurtleVideoConference</string>
    <string name="enter_meeting_name">Enter Meeting Name</string>
    <string name="start_new_meeting">Start New Meeting</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="slide_1_title">Secure</string>
    <string name="slide_1_desc">TurtleVideoConference App is secure with end to end encrypt algorithm</string>
    <string name="slide_2_title">Live Chat</string>
    <string name="slide_2_desc">You can chat with other users while using TurtleVideo Conference</string>
    <string name="slide_3_title">Free</string>
    <string name="slide_3_desc">You have not need to pay anything for using TurtleVideoConference Its free Forever</string>
    <string name="slide_4_title">Multiple Users</string>
    <string name="slide_4_desc">TurtleVideoConference Support Over 70 People call.</string>
    <string name="start">Start</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="enrollment">Enrollment Number</string>
    <string name="signup">Signup</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
