<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="24dp"
    android:layout_marginStart="24dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/loginHeader"
        android:text="@string/register"
        android:layout_marginTop="@dimen/loginViewsMargin"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputName"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <EditText
            android:id="@+id/editTextName"
            style="@style/modifiedEditText"
            android:hint="@string/login_name_hint"
            android:inputType="textPersonName"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputMobile"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <EditText
            android:id="@+id/editTextenrollment"
            style="@style/modifiedEditText"
            android:hint="@string/enrollment"
            android:inputType="number"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <EditText
            android:id="@+id/editTextEmail"
            style="@style/modifiedEditText"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/modifiedEditText"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/SignupButton"
        style="@style/loginButton"
        android:text="@string/signup"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/loginViewsMargin"/>

    <TextView
        android:id="@+id/logintext"
        style="@style/parent"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        android:textColor="@color/primaryTextColor"
        android:text="@string/signup_login_hint"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:onClick="goToLogin"/>
<ProgressBar
    android:id="@+id/pbar"
    android:layout_marginTop="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:visibility="gone"
    />
</LinearLayout>